kubernetes/user-service/user-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-deployment
  namespace: lastmile
  labels:
    app: user-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: imsonu2030/lastmile-user-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
