kubernetes/user-service/user-service-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: lastmile
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
